# mcp-audit-trail

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  real_server_test.py  run_demo.py  sample_server.py
mcp_audit_trail/: __init__.py  cli.py  proxy.py  report.py
scripts/: capture_screenshots.py
tests/: test_api.py  test_cli.py  test_integration.py  test_proxy.py  test_report.py
