[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-audit-trail"
version = "0.1.1"
description = "Lightweight observability for MCP agent interactions — capture every tool call, generate visual audit trails."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Khushi Dahiya" },
]
keywords = ["mcp", "audit", "observability", "agents", "llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/khushidahi/mcp-audit-trail"
Repository = "https://github.com/khushidahi/mcp-audit-trail"
Issues = "https://github.com/khushidahi/mcp-audit-trail/issues"

[project.scripts]
mcp-audit-proxy = "mcp_audit_trail.cli:proxy_cli"
mcp-audit-report = "mcp_audit_trail.cli:report_cli"

[project.optional-dependencies]
demo = ["mcp>=1.0"]
dev = ["pytest>=8.0", "mcp>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
